fixing bugs issues caused px on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body,html{
     font-size: 1rem;
     text-transform: uppercase;
     color: #f6be00;
-    font-weight: bolder;
+    text-decoration: solid;
+    font-weight: bolder; 
    
 
 }
@@ -94,13 +95,13 @@ h2{
 
 }
 .classes p{
-     text-align: center;
+     text-align: left;
      font-size: 20px;
      margin-right: 2rem;
      color: #f6be00;
      font-family: Oswald;
-     padding: auto;
-     margin: auto;
+     padding: 0 auto;
+     margin: 0  auto;
      
      
 }
@@ -116,13 +117,13 @@ h2{
 }
 .weight p{
 
-     text-align: center;
+     text-align: left;
      font-size: 20px;
      margin-right: 2rem;
      color: #f6be00;
      font-family: Oswald;
-     padding: auto;
-     margin: auto;
+     padding: 0 auto;
+     margin: 0 auto;
      
     }
 
@@ -139,12 +140,12 @@ h2{
 }
 .box p{
    
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     margin-right: 2rem;
     color: #f6be00;
     font-family: Oswald;
-    padding: ;
+    padding: 0 auto;
     margin:  0 auto;
      
 
@@ -164,13 +165,13 @@ h2{
 
 .yoga p{
     
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     margin-right: 2rem;
     color: #f6be00;
     font-family: Oswald;
-    padding: auto;
-    margin: auto;
+    padding: 0 auto;
+    margin:  0 auto;
 }
 
 
@@ -258,11 +259,13 @@ h2{
     text-align: center;
     
 }
-/* footer css */
+/* footer and social links css */
 .soc{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: sticky;
+
    
    
 }
@@ -280,12 +283,7 @@ h2{
 }
 
 
-.soc{
-    display: flex;
-    justify-content: space-between;
-    position:fixed;
-    bottom:  0%;
-    width: 100%;
+
 
 
 }
@@ -407,7 +405,7 @@ h6{
 @media screen and (max-width: 768px){
 
     .nav header{
-        font-size: 10px;
+        font-size: 0.5rem;
        
 
     }
@@ -416,9 +414,12 @@ h6{
     }
 
 .nav ul li a{
-    font-size: 15px;
-    text-align: center;
-    flex-direction: row;
+    font-size: 0.5rem;
+    text-align: right;
+    display: flex;
+    justify-content:right;
+    vertical-align: 0.5rem;
+
 }
 
 .sign-up{
@@ -440,27 +441,23 @@ h2{
 }
 
 
-#name{
-  width: 100px;
-  height: 60%;
- 
-}
 
-form label{
-  display: flex;
-  margin-top: 20px;
-  font-size: 20px;
-  color: #f6be00;
-}
 
-form input{
-  width: 70%;
-  height: inherit;
-  padding: 10px;
+#name input{
+  width: 36%;
+  height: 0.5rem;
   border:#f6be00 solid 10px;
   border-radius: 9px;
   
 
+}
+
+#last input{
+    width: 36%;
+    height: 0.5rem;
+    border:#f6be00 solid 10px;
+    border-radius: 9px;
+    
 }
 
 button{
